--- a/estil.less
+++ b/estil.less
@@ -122,6 +122,14 @@
 @taronja: #FE5722;
 @gris: #F1F1F1;
 
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+
+.logotip {
+    font-family: 'Rock Salt', cursive;
+}
+
 
 .abansFooter {
     border: solid #CCCCCC 2px;
@@ -146,8 +154,18 @@ footer {
             margin-right: 10px;
         }
     }
+    .social {
+        .fa-twitter {
+            color: #65b2ff;
+        }
+        i {
+            margin-right: 10px;
+        }
+    }
+    
 }
 
 #finalDeTot {
     background-color: @taronja;
+    color: white;
 }
