--- a/estil.less
+++ b/estil.less
@@ -155,6 +155,19 @@ body {
     color: white;
 }
 
+.carrousel-petit {
+    background-color: @gris;
+    .carousel-indicators {
+        li {
+        border-color: black;
+        }
+        .active {
+            background-color: @taronja;
+            border-color: @taronja;
+        }
+    }
+}
+
 //Footer -----------------
 
 footer {
