--- a/estil.less
+++ b/estil.less
@@ -130,6 +130,11 @@ body {
     font-family: 'Rock Salt', cursive;
 }
 
+.newsletter {
+    .text-blanc {
+        color: white;
+    }
+}
 
 .abansFooter {
     margin-bottom: 50px;
@@ -155,6 +160,11 @@ body {
     color: white;
 }
 
+.boto-blanc {
+    background-color: white;
+    border: 1px solid black;
+}
+
 .carrousel-petit {
     background-color: @gris;
     .carousel-indicators {
@@ -166,6 +176,22 @@ body {
             border-color: @taronja;
         }
     }
+    img {
+        max-height: 200px;
+        
+    }
+    .item {
+        margin: 90px 0 90px 0;
+    }
+    h2 {
+        color: @taronja;
+        font-weight: 900;
+        font-size: 3em;
+    }
+    button {
+        margin-top: -10px;
+    }
+    
 }
 
 //Footer -----------------
