--- a/estil.less
+++ b/estil.less
@@ -1,5 +1,4 @@
-
-    /*      
+/*      
 <nav role="navigation" class="navbar navbar-default navbar-fixed-top">
   <div class="container">
 
@@ -121,7 +120,6 @@
 
 @taronja: #FE5722;
 @gris: #F1F1F1;
-
 body {
     font-family: 'Open Sans', sans-serif;
 }
@@ -130,13 +128,12 @@ body {
     font-family: 'Rock Salt', cursive;
 }
 
-.newsletter {
-    .text-blanc {
-        color: white;
-    }
+.text-blanc {
+    color: white;
 }
 
 .abansFooter {
+    margin-top: 50px;
     margin-bottom: 50px;
     border: solid #CCCCCC 2px;
     text-align: center;
@@ -146,7 +143,6 @@ body {
     }
     .row {
         margin-top: 10px;
-        
         & > div {
             h3 {
                 margin-top: 5px;
@@ -169,7 +165,7 @@ body {
     background-color: @gris;
     .carousel-indicators {
         li {
-        border-color: black;
+            border-color: black;
         }
         .active {
             background-color: @taronja;
@@ -178,7 +174,6 @@ body {
     }
     img {
         max-height: 200px;
-        
     }
     .item {
         margin: 90px 0 90px 0;
@@ -191,11 +186,34 @@ body {
     button {
         margin-top: -10px;
     }
-    
+}
+
+.centrar-petit {
+    text-align: center;
+}
+
+
+
+.formulari-transparent {
+    background-color: rgba(255, 255, 255, 0);
+    color: white;
+    &::-webkit-input-placeholder {
+        color: @gris;
+    }
+    &:-moz-placeholder {
+        /* Firefox 18- */
+        color: @gris;
+    }
+    &::-moz-placeholder {
+        /* Firefox 19+ */
+        color: @gris;
+    }
+    &:-ms-input-placeholder {
+        color: @gris;
+    }
 }
 
 //Footer -----------------
-
 footer {
     background-color: #F5F5F5;
     .itemFooter {
@@ -214,7 +232,6 @@ footer {
             display: block;
         }
     }
-    
 }
 
 #finalDeTot {
@@ -222,8 +239,13 @@ footer {
     color: white;
 }
 
+
 /* Small devices (tablets, 768px and up) */
+
 @media (min-width: 768px) {
+    .centrar-petit {
+        text-align: left;
+    }
     footer {
         .social {
             text-align: left;
