--- a/prova.less
+++ b/prova.less
@@ -33,12 +33,62 @@
     }
     .hover-item {
         position: absolute;
-        top: 0;
         right: 0;
-        height: 100%;
+        height: 50px;
+        line-height: 50px;
         width: 100%;
         display: none;
         background-color: rgba(0, 0, 0, 0.6);
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+        text-align: center;
+        color: white;
+        i {
+            padding-left: 5px;
+            padding-right: 5px;
+            position: relative;
+            //font-size: 1.5em;
+            
+            &:nth-child(2):hover {
+                color: @taronja;
+                .hover-carrito {
+                    display: block;
+                }
+            }
+            .hover-carrito {
+                color: white;
+                position: absolute;
+                top: ~"calc(100% + 7px)";
+                left: 50%;
+                -webkit-transform: translateX(-50%);
+                -ms-transform: translateX(-50%);
+                transform: translateX(-50%);
+                
+                //font-size: 1em;
+                width: 100px;
+                background-color: @taronja;
+                display: none;
+                text-align: center;
+                border-radius: 5px;
+                
+                height: 30px;
+                line-height: 30px;
+                
+                .arrow-up {
+                    width: 0; 
+                    height: 0; 
+                    border-left: 5px solid transparent;
+                    border-right: 5px solid transparent;
+
+                    border-bottom: 5px solid @taronja;
+                    position: absolute;
+                    top: -5px;
+                    left: ~"calc(50% - 5px)";
+                }
+            }
+        }
     }
     
     &:hover {
