--- a/prova.css
+++ b/prova.css
@@ -116,73 +116,80 @@
 body {
   font-family: 'Open Sans', sans-serif;
 }
-.carrousel-petit {
-  background-color: #f1f1f1;
+.arrivals .standard {
+  height: 405px;
+  border: 2px solid #cccccc;
   position: relative;
 }
-.carrousel-petit .carousel-indicators li {
-  border-color: black;
-}
-.carrousel-petit .carousel-indicators .active {
-  background-color: #fe5722;
-  border-color: #fe5722;
-}
-.carrousel-petit .item {
-  margin: 90px 0 90px 0;
-}
-.carrousel-petit h2 {
-  color: #fe5722;
-  font-weight: 900;
-  font-size: 2em;
-}
-.carrousel-petit .text-carousel {
+.arrivals .standard > div {
   position: relative;
-  float: left;
-  width: 80%;
-  z-index: 999;
-}
-.carrousel-petit .imatge-carousel {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 42%;
-  text-align: center;
-  height: 200px;
-}
-.carrousel-petit .imatge-carousel img {
-  position: relative;
-  display: inline-block;
-  max-height: 200px;
+  top: 50%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
-  top: 50%;
 }
-.carrousel-petit .boto-carousel {
+.arrivals .standard .estrelles {
+  color: #fe5722;
+}
+.arrivals .standard p:nth-child(2) {
+  font-weight: bold;
+}
+.arrivals .standard-taronja {
+  background-color: #fe5722;
+  color: white;
+  border-color: #fe5722;
+}
+.arrivals .standard-taronja .estrelles {
+  color: white;
+}
+.comentari {
+  position: relative;
+  background-color: #f1f1f1;
+  padding: 20px;
+  max-width: 350px;
+  margin: 0 auto;
+}
+.comentari .imatge img {
+  display: inline-block;
+}
+.comentari i:nth-child(2) {
+  margin-left: 15px;
+}
+.comentari .more {
   position: absolute;
   right: 0;
-  top: 200px;
-  text-align: center;
-  width: 42%;
+  bottom: 0;
+  margin-right: 20px;
 }
-.carrousel-petit .boto-carousel button {
-  margin-top: -10px;
+.comentari:hover {
+  -webkit-box-shadow: 0px 6px 25px -1px #737373;
+  -moz-box-shadow: 0px 6px 25px -1px #737373;
+  box-shadow: 0px 6px 25px -1px #737373;
 }
+.comentari:hover i {
+  color: #fe5722;
+}
+.comentari:hover .more {
+  color: #fe5722;
+}
+/* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-  .carrousel-petit .text-carousel {
-    width: 65%;
+  .arrivals .standard {
+    height: 258px;
   }
-  .carrousel-petit .imatge-carousel {
-    width: 35%;
+  .comentari {
+    max-width: none;
   }
-  .carrousel-petit .boto-carousel {
-    float: left;
-    clear: left;
-    position: relative;
-    top: 0;
-    width: auto;
+}
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .arrivals .standard {
+    height: 343px;
   }
-  .carrousel-petit .boto-carousel button {
-    margin-top: 0;
+}
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  .arrivals .standard {
+    height: 405px;
   }
 }
