--- a/estil.css
+++ b/estil.css
@@ -12,6 +12,43 @@ body {
   border: solid #cccccc 1px;
   background-color: white;
 }
+.quadrats .segon,
+.quadrats .tercer,
+.quadrats .quart {
+  background-color: #f1f1f1;
+}
+.quadrats .primer {
+  margin-bottom: 10px;
+}
+.quadrats .primer img {
+  min-height: 100%;
+}
+.quadrats .segon {
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+.quadrats .segon,
+.quadrats .tercer {
+  position: relative;
+  float: left;
+  width: calc(50% - 5px);
+  padding: 10px;
+  height: 500px;
+}
+.quadrats .segon img,
+.quadrats .tercer img {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.quadrats .quart {
+  overflow: auto;
+}
+.quadrats .quart img {
+  float: right;
+}
 .titol .linia-curta {
   display: inline-block;
   height: 1px;
@@ -376,6 +413,14 @@ footer h3 {
 @media (min-width: 992px) {
   .arrivals .standard {
     height: 343px;
+  }
+  .quadrats .primer,
+  .quadrats .segon,
+  .quadrats .tercer {
+    height: 265px;
+  }
+  .quadrats .col-md-8 {
+    padding: 0;
   }
 }
 /* Large devices (large desktops, 1200px and up) */
